fix: update button styles to improve visibility and consistency

--- a/tictactoe.css
+++ b/tictactoe.css
@@ -55,6 +55,7 @@ h1{
     background-color: transparent;
 margin-top: 2rem;
     border-radius: 1rem ;
+    color: wheat;
     border: white solid 2px;
 }
 h1
